--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nft.app.nft">
+    package="com.calenbine.app">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="nft"
+        android:label="calenbine"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
