--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.calenbine.app">
+    package="com.template.app">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="calenbine"
+        android:label="template"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
