--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.0
   flutter_screenutil: ^5.0.1+2
+  equatable: ^2.0.3
+  firebase_auth: ^3.4.2
+  cloud_firestore: ^3.1.18
+  firebase_core: ^1.19.2
   concentric_transition: ^1.0.1
   smooth_page_indicator: ^1.0.0+2
   google_fonts: ^2.1.0
@@ -26,6 +30,11 @@ dependencies:
   pinput: ^1.1.0
   modal_bottom_sheet: ^2.0.0
   shared_preferences: ^2.0.13
+  material_design_icons_flutter: ^5.0.659
+  firebase_dynamic_links: ^4.3.2
+  photo_view: ^0.14.0
+  go_router: ^3.0.6
+  flutter_web_frame: ^0.0.3
 
 dev_dependencies:
   flutter_test:
