--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   photo_view: ^0.14.0
   go_router: ^3.0.6
   flutter_web_frame: ^0.0.3
+  tab_container: ^2.0.0
 
 dev_dependencies:
   flutter_test:
