--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   go_router: ^3.0.6
   flutter_web_frame: ^0.0.3
   tab_container: ^2.0.0
-  timer_count_down: ^2.2.1
+  timer_count_down: ^2.2.
+  scrollable_positioned_list: ^0.3.2
 
 dev_dependencies:
   flutter_test:
